# python-shamir-mnemonic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  Makefile  README.rst  generate_vectors.py  main.py  pyproject.toml  setup.cfg  setup.py  test_cli.sh  test_shamir.py  vectors.json
.github/workflows/: lint.yml  test.yml
shamir_mnemonic/: __init__.py  cipher.py  cli.py  constants.py  recovery.py  rs1024.py  shamir.py  shamir_mnemonic.py  share.py  utils.py  wordlist.py
