[tool.poetry]
name = "shamir-mnemonic"
version = "0.2.3"
description = "SLIP-39 Shamir Mnemonics"
authors = ["Trezor <info@trezor.io>"]
license = "MIT"
readme = [
    "README.rst",
    "CHANGELOG.rst",
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
click = ">=7,<9"
bip32utils = "^0.3.post4"
pytest = "*"

[tool.poetry.group.dev.dependencies]
black = ">=20"
isort = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
