[tool.poetry]
name = "shamir-mnemonic"
version = "0.3.0"
description = "SLIP-39 Shamir Mnemonics"
authors = ["Trezor <info@trezor.io>"]
license = "MIT"
readme = [
    "README.rst",
    "CHANGELOG.rst",
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
dataclasses = { version = "*", python = "<=3.6" }
click = { version = ">=7,<9", optional = true }

[tool.poetry.group.dev.dependencies]
bip32utils = "^0.3.post4"
pytest = "*"
black = ">=20"
isort = "^5"

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.scripts]
shamir = "shamir_mnemonic.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
